# nist

./: Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml  settings_example.json
releases/linux/: nist
src/: ansi.rs  font_discovery.rs  history.rs  main.rs  pane_layout.rs  screen_buffer.rs  sdl_renderer.rs  settings.rs  state.rs  tab_gui.rs  terminal.rs  terminal_config.rs  test_server.rs
src/ai/: agent.rs  mod.rs
src/input/: events.rs  hotkeys.rs  keyboard.rs  mod.rs  mouse.rs
src/system/: cli.rs  init.rs  mod.rs
src/terminal/: config.rs  main.rs  mod.rs  sequences.rs  utils.rs
src/ui/: animations.rs  context_menu.rs  dialogs.rs  filtered_list.rs  mod.rs  render.rs  text_input.rs
static/scripts/: bash_init.sh  zsh_init.sh
