[package]
name = "nist"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "nist"
path = "src/main.rs"

[features]
default = ["test-server"]
test-server = []

[dependencies]
portable-pty = "0.9.0"
ansi_term = "0.12.1"
num = "0.4.3"
arboard = "3.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tinyjson = "2.5"
sysinfo = "0.30"
image = "0.24"
directories = "5.0"
signal-hook = "0.3"

# SDL3 for Linux (build from source with plutosvg and HarfBuzz support)
[target.'cfg(target_os = "linux")'.dependencies]
sdl3 = { version = "0.17.1", features = ["ttf", "build-from-source"] }
sdl3-ttf-sys = { version = "0.6", features = ["sdlttf-plutosvg", "sdlttf-harfbuzz", "build-from-source"] }

# SDL3 for macOS (build from source with plutosvg and HarfBuzz support)
[target.'cfg(target_os = "macos")'.dependencies]
sdl3 = { version = "0.17.1", features = ["ttf", "build-from-source"], default-features = false }
sdl3-ttf-sys = { version = "0.6", features = ["sdlttf-plutosvg", "sdlttf-harfbuzz", "build-from-source"] }

# SDL3 for Windows (use pre-built DLLs)
[target.'cfg(target_os = "windows")'.dependencies]
sdl3 = { version = "0.17.1", features = ["ttf"] }
sdl3-ttf-sys = { version = "0.6", features = ["sdlttf-plutosvg", "sdlttf-harfbuzz"] }

[target.'cfg(target_os = "macos")'.dependencies.libproc]
version = "0.14"

[build-dependencies]
chrono = "0.4"
